# xai-shift-fingerprints

./: .gitignore  LICENSE  PUBLISH_GITHUB_STAGESET_2026-02-28.md  README.md  environment.yml  pyproject.toml  requirements.txt  run_paper_pipeline.sh  run_pipeline_resume.sh  run_remaining_pipeline.sh
configs/: counterfactuals.yaml  experiments.yaml  paths.yaml  protocol_amendment_v1_0_1_journal.yaml  protocol_lock_v1.yaml
governance/: HARDSHIFT_V0_2_FINAL_OUTCOME_2026-02-28.md  P2_GAMMA085_FAILURE_JPEG90_ACTIVATION_2026-02-23.md  P2_GAMMA085_GATE3_FAILURE_2026-02-23.md
reports_v2/: LAUNCH_PILOT.md  README.md  gate4_mask_free_ig16_robustness_summary.csv  gate4_predicted_mask_ig16_robustness_summary.csv  run_registry.csv
scripts/: _path_setup.py  analyze_attribution_methods.py  analyze_bbox_stratified.py  analyze_deployment_alert_sensitivity.py  analyze_divergence.py  audit_bitwise_determinism.py  auto_fill_table2.py  backfill_patient_id.py  baseline_shift_detection.py  bootstrap_divergence.py  build_journal_results_table.py  build_metadata_overrides.py  build_metadata_tables.py  check_nih_archives.py  compute_divergence.py  enhanced_statistical_analysis.py  error_correlation_analysis.py  eval_benchmarks.py  evaluate_counterfactuals.py  export_attribution_examples.py  export_counterfactual_triptych.py  feature_importance_pca.py  fetch_nih_bbox.py  fix_data_inconsistencies.py  fix_nih_masks.py  gate3_full_seeds_analysis.py  gate4_compile_report.py  gate5_clinical_relevance.py  gate5_finalize_decision.py  gate6_repro_bundle.py  generate_added_value_table.py  (+57 more)
(+150 files in other folders)
